--- a/src/index.html
+++ b/src/index.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
 <html>
+    <head>
+        <title>
+            Galacic Colonies - Launcher
+        </title>
+    </head>
     <link rel = "STYLESHEET" href="index.css">
     <head>
     </head>
     <body>
-        <h1>test</h1>
-        <h2>what</h2>
+        <a href="game.html">Launch</a>
     </body>
 </html>
