--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <link rel = "STYLESHEET" href="index.css">
         <title>
-            Galacic Colonies - Launcher
+            Galactic Colonies
         </title>
     </head>
-    <link rel = "STYLESHEET" href="index.css">
-    <head>
-    </head>
     <body>
-        <a href="game.html">Launch</a>
+        <h1>
+            This is the indev version of this game.
+        </h1>
+        <p>
+            please report any isues
+        </p>
     </body>
 </html>
