--- a/src/index.html
+++ b/src/index.html
@@ -7,11 +7,14 @@
         </title>
     </head>
     <body>
+        <a href="game.html">Launch</a>
         <h1>
             This is the indev version of this game.
         </h1>
         <p>
             please report any isues
         </p>
+        <div id="map"></div>
+        <script type="text/javascript" src="../dist/game.js"></script>
     </body>
 </html>
